flash messages for userlogin and signup on errors, activationlink in email

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 		"mongoose": "*",
 		"passport": "*",
 		"passport-local": "*",
-		"nodemailer": "*"
+		"nodemailer": "*",
+		"async": "*",
+		"connect-flash": "*"
   }
 }
